Added plugin in pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.Pranitha_Final_Exam</groupId>
-    <artifactId>PrimeNumbers</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version> <!-- Use the latest version -->
+            </plugin>
+        </plugins>
+    </build>
+
+
+    <groupId>org.Assignment4</groupId>
+    <artifactId>Assignment4_CI</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,6 +24,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -23,3 +35,5 @@
     </dependencies>
 
 </project>
+
+
